# bazel_jest_test_coverage

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
patches/: @bazel+typescript+3.5.1.patch
tools/: bazel_deps.bzl
ts_library/: BUILD.bazel  sample.spec.ts
ts_project/: BUILD.bazel  sample.spec.ts  tsconfig.json
