load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//jest-cli:package_json.bzl", jest_test = "bin")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "src",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.spec.ts"],
    ),
    declaration = True,
    tsconfig = "tsconfig.json",
)

ts_project(
    name = "jest_src",
    srcs = glob(["*.spec.ts"]),
    declaration = True,
    tsconfig = "tsconfig.json",
    deps = [
        ":src",
        "@npm//@types",
    ],
)

jest_test.jest_test(
    name = "jest",
    args = [
        "--no-cache",
        "--no-watchman",
        "--ci",
        "--colors",
        "--config",
        "jest.config.js",
    ],
    data = [
        ":jest_src",
        "//:configs",
    ],
)
